# rp2040-serial-bootloader

./: CMakeLists.txt  README.md  bootloader.ld  combined.ld  combined_debug.ld  main.c  standalone.ld
